Fixed api using json object in query
